Increase padding and fix overflow for tasks.

--- a/src/Components/Task/task.css
+++ b/src/Components/Task/task.css
@@ -1,13 +1,19 @@
 .task-body{
     display: grid;
-    grid-template-columns: 1fr 100px;
-    grid-template-rows: 20px 20px;
+    grid-template-columns: 1fr auto;
+    grid-template-rows: auto auto;
     background-color: rgba(245, 245, 244, 0.5);
     column-gap: 10px;
     row-gap: 5px;
     margin-bottom: 5px;
-    padding: 5px 0px;
+    padding: 5px 5px;
     align-self: stretch;
+}
+
+.task-title{
+    font-size: 1.1rem;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .task-description{
